// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadTranslations should correctly merge and transform translations 1`] = `
{
  "ar": {
    "layout": {
      "events": "الفعاليات",
      "localInformation": "معلومات محلية",
    },
  },
  "de": {
    "app": {
      "metaDescription": "Integreat ist Ihr digitaler Guide für Deutschland. Finden Sie lokale Informationen, Veranstaltungen und Beratung. Immer aktuell und in Ihrer Sprache.",
      "pageTitles": {
        "localNews": "Lokale Nachrichten",
        "notFound": "Seite nicht gefunden",
        "tunews": "tünews",
      },
    },
    "dashboard": {
      "localInformation": "Malte Informationen",
      "news": "Malte Nachrichten",
    },
    "layout": {
      "events": "Veranstaltungen",
      "localInformation": "Lokale Informationen",
      "news": "Nachrichten",
      "newsAlternative": "Neuigkeiten",
    },
  },
  "en": {
    "dashboard": {
      "events": "Malte Events",
      "localInformation": "Malte information",
    },
  },
  "kmr": {
    "layout": {
      "localInformation": "Zanyariyên xwecihî",
    },
  },
  "zh-CN": {
    "layout": {
      "localInformation": "本地信息",
    },
  },
}
`;

exports[`loadTranslations should correctly transform translations 1`] = `
{
  "ar": {
    "layout": {
      "events": "الفعاليات",
      "localInformation": "معلومات محلية",
    },
  },
  "de": {
    "app": {
      "metaDescription": "Integreat ist Ihr digitaler Guide für Deutschland. Finden Sie lokale Informationen, Veranstaltungen und Beratung. Immer aktuell und in Ihrer Sprache.",
      "pageTitles": {
        "localNews": "Lokale Nachrichten",
        "notFound": "Seite nicht gefunden",
        "tunews": "tünews",
      },
    },
    "layout": {
      "events": "Veranstaltungen",
      "localInformation": "Lokale Informationen",
      "news": "Nachrichten",
      "newsAlternative": "Neuigkeiten",
    },
  },
  "kmr": {
    "layout": {
      "localInformation": "Zanyariyên xwecihî",
    },
  },
  "zh-CN": {
    "layout": {
      "localInformation": "本地信息",
    },
  },
}
`;
